--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,6 +24,23 @@ body{
   align-items: center;
   position: relative;
 }
+.error{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+.error .card{
+  display: grid;
+  place-items: center;
+}
+.error .nro,
+.error a{
+  color: var(--bg-color-active);
+}
+.error a{
+  font-size: 1.25rem;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
