--- a/src/pages/act7/act_7.module.css
+++ b/src/pages/act7/act_7.module.css
@@ -7,7 +7,7 @@
 	align-items: center;
 	justify-content: center;
 	text-align: center;
-	gap: 1rem;
+	gap: 10px;
 	article{
 		display: flex;
 		background: var(--bg-color-card);
@@ -17,8 +17,8 @@
 		color: var(--font-color);
 		position: relative;
 		.img_container{
-			width: 200px;
-			height: 350px;
+			width: 170px;
+			height: 290px;
 			overflow: hidden;
 			border-radius: 15px;
 			display: flex;
@@ -66,4 +66,14 @@
 	width: 10px;
 	height: 0;
 	display: none;
+}
+@media(max-width: 500px){
+	.card_list article{
+		width: calc(50% - 5px);
+		aspect-ratio: 2 / 3;
+		.img_container{
+			width: 100%;
+			height: 100%;
+		}
+	}
 }
